landing page and navigation bar complete

--- a/account.html
+++ b/account.html
@@ -8,8 +8,15 @@
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Account Page</h1>
-
+    <div class="topbar">
+      <div class="dropdown">
+        <p class="dropbtn">Instaclone</p>
+        <div class="dropdown-content">
+          <a href="feed.html">Feed</a>
+          <a class="active" href="account.html">Your Account</a>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
