--- a/feed.html
+++ b/feed.html
@@ -8,7 +8,15 @@
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Feed Page</h1>
+    <div class="topbar">
+      <div class="dropdown">
+        <p class="dropbtn">Instaclone</p>
+        <div class="dropdown-content">
+          <a class="active" href="feed.html">Feed</a>
+          <a href="account.html">Your Account</a>
+        </div>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
