--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Multigram</title>
+    <title>Log in | Multigram</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
-
+    <div class="landingflex">
+      <h1>Instaclone</h1>
+      <input type="text" id="username" placeholder="Enter your username here..">
+      <input type="password" id="password" placeholder="Enter your password here..">
+      <button id="login" onclick="document.location='feed.html'">Log In</button> 
+    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
