--- a/account.html
+++ b/account.html
@@ -16,6 +16,36 @@
           <a class="active" href="account.html">Your Account</a>
         </div>
       </div>
+      <div class="loginsignup">
+        <p>Log in</p>
+        <p>Sign up</p>
+      </div>
+    </div>
+    <div class="topandbottom">
+      <div class="accountdetails">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/294956161_453989190071162_5899365116519300476_n.png?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=EqybAa33WU8AX-TVTmJ&_nc_ht=scontent-lhr8-1.xx&oh=00_AfAR-2JwdEK6UENxZ0KvsnJ_5dKEU6bATqynmKo911Jhsg&oe=65340F4F" height="100px" class="profilepicture2">
+        <div class="nameandbuttons">
+          <p>multiverse1</p>
+          <div class="followmessagebuttons">  
+            <p>Follow</p>  
+            <p>Message</p>
+          </div>      
+        </div>
+      </div>
+        <div class="description">
+        <p>This is a random blurb about this instagram account.</p>
+      
+      </div>
+    </div>
+    <div class="posts">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
+      <img src="https://picsum.photos/400/500" alt="" class="accountimg">
     </div>
     <script src="script.js"></script>
   </body>
